correcciones a Estado Republicano a Estado Plurinacional

--- a/public/index.html
+++ b/public/index.html
@@ -1810,7 +1810,7 @@
       <h4><a href="/historia/de-republicano-a-plurinacional/" >Del Estado Republicano al Estado Plurinacinal</a></h4>
       
       <div class="article-style">
-        <p>Tertulia organizada en celebración del XIII Aniversario del Estado Plurinacional de Bolivia que reconoce a las naciones indígenas originario campesinas y deja en el pasado el Estado colonial, republicano y neoliberal.</p>
+        <p>Tertulia organizada en celebración del XIII Aniversario del Estado Plurinacional de Bolivia</p>
       </div>
       
     </div>
