se agrega mencion a jcb

--- a/public/historia/de-republicano-a-plurinacional/index.html
+++ b/public/historia/de-republicano-a-plurinacional/index.html
@@ -739,18 +739,20 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>Tertulia organizada en celebración del XIII Aniversario del Estado Plurinacional de Bolivia que reconoce a las naciones indígenas originario campesinas y deja en el pasado el Estado colonial, republicano y neoliberal.</p>
-<h1 id="expositores">Expositores</h1>
-<h2 id="profesor-sergio-pérez-quispe">Profesor Sergio Pérez Quispe</h2>
+      <p>Tertulia organizada en celebración del <strong>XIII Aniversario del Estado Plurinacional de Bolivia</strong> que reconoce a las naciones indígenas originario campesinas y deja en el pasado el Estado colonial, republicano y neoliberal.
+Este evento esta organizada por Kallpa Comunitaria y La juventud comunista de Bolivia, esta es una organización política juvenil vinculada al Partido Comunista de Bolivia.
+La <strong>JCB</strong> tiene presencia a nivel de los nueve departamentos de nuestro estado plurinacional durante sus sesenta y nueve años de trayectoria dentro del escenario político  boliviano a sido el semillero de formación de importantes figuras de la política nacional, entre sus objetivos  esta promover la conciencia de clase en los sectores populares, indigena-campesinos y obreros bajo los postulados del socialismo cientifico y el Marxismo Leninismo.</p>
+<h2 id="expositores">Expositores</h2>
+<h3 id="profesor-sergio-pérez-quispe">Profesor Sergio Pérez Quispe</h3>
 <p>Maestro con 10 años de servicio</p>
 <ul>
 <li>Maestro de primaria en la comunidad Villa Fátima, ubicada en el Parque Nacional y Territorio Indígena Isiboro Se cure.</li>
 <li>Maestro del nivel secundario en la unidad educativa Puerto San Lorenzo en la rivera del río Sécure.</li>
 <li>Ocho años de servicio en la Provincia Pasajes del departamento de La Paz.</li>
-<li>Responsable del componente de Formación Comunitaria en el programa de formación complementaria PROFOCOM-SEP durante la gestión 2021</li>
+<li>Responsable del componente de Formación Comunitaria en el programa de formación complementaria <strong>PROFOCOM-SEP</strong>   durante la gestión 2021</li>
 </ul>
-<h2 id="licenciado-rené-ticona">Licenciado René Ticona</h2>
-<p>es Licenciado en filosofía UMSA y profesor de filosofía, actualmente se prepara para defender su tesis de maestría en CIDES-UMSA sobre la filosofía de la liberación.</p>
+<h3 id="licenciado-rené-ticona">Licenciado René Ticona</h3>
+<p>es Licenciado en filosofía <strong>UMSA</strong> y profesor de filosofía, actualmente se prepara para defender su tesis de maestría en <strong>CIDES-UMSA</strong> sobre la filosofía de la liberación.</p>
 <iframe width="650" height="400" src="https://www.youtube.com/embed/sZw4sEty8g4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </div>
